package ch.swe2.uno.utils;

public interface CustomClassLoaderListener {
	public void classLoaded( Class<?> c );
}
